--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 # Replace with your connection string
 spring.datasource.driverClassName=com.mysql.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/test
+spring.datasource.url=jdbc:mysql://localhost:3306/sr
 spring.datasource.username=root
 spring.datasource.password=kumar
 spring.jpa.database-platform = org.hibernate.dialect.MySQL5Dialect
